# llm-gateway

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/_style/: repo.mplstyle
src/lgw/: __init__.py  runner.py  types.py
src/lgw/cli/: main.py
src/lgw/ledger/: store.py
src/lgw/middleware/: app.py
src/lgw/providers/: base.py
src/lgw/router/: gateway.py
src/lgw/viz/: charts.py
tests/: test_app.py  test_gateway.py  test_ledger.py  test_providers.py  test_runner.py
