[project]
name = "llm-gateway"
version = "0.5.0"
description = "Production multi-provider LLM gateway: FastAPI + httpx with retry / fallback / cost ledger / OpenTelemetry tracing / per-tenant budget enforcement. Benchmarked at 10k+ requests."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.7",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "tenacity>=8.2",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "anyio>=4.2",
]

[project.scripts]
lgw = "lgw.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lgw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TID", "PT"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
